<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdminA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_au">AuActivity</string>
    <string name="hint1">User name</string>
    <string name="hint2">Password</string>
    <string name="texte1">S\'authentifier</string>
    <string name="title_activity_acceuille">AcceuilleActivity</string>
    <string name="btntexte">Liste des Rendez-vous</string>
    <string name="btntexte2">Gestion de résultats</string>
    <string name="btntexte3">Planning de vaccination</string>
    <string name="title_activity_pv">PVActivity</string>
    <string name="btn5">Ajouter</string>
    <string name="title_activity_liste_rdv">ListeRDVActivity</string>
    <string name="title_activity_ajout_v">AjoutVActivity</string>
    <string name="btntexte8">Ajouter</string>
    <string name="hint3">Nom du vaccin</string>
    <string name="hint4">Date de vaccin</string>
    <string name="title_activity_gestion_rdv">GestionRDVActivity</string>
    <string name="title_activity_majvaccin">MAJVaccinActivity</string>
    <string name="delete">Supprimer</string>
    <string name="update">Modifier</string>
    <string name="enr">Enregistrer</string>
    <string name="title_activity_liste_patient">ListePatientActivity</string>

</resources>