<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MAJVaccinActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rounded_layout"
            android:layout_marginBottom="20dp" >

            <EditText
                android:id="@+id/etnewnomv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rounded_layout"
            android:layout_marginBottom="40dp" >

            <EditText
                android:id="@+id/etnewdatev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rounded_layout_btn"
            android:layout_marginBottom="10dp" >

            <Button
                android:id="@+id/btnmodifier"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_rounded_layout_btn"
                android:text="@string/update" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rounded_layout_btn"
            android:layout_marginBottom="10dp" >

            <Button
                android:id="@+id/btngestionresultat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_rounded_layout_btn"
                android:text="@string/delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rounded_layout_btn" >

            <Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_rounded_layout_btn"
                android:text="@string/enr" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>